--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@ h1 {
 	
 #f1-logo {
 	padding: 30px;
+	text-align: center;
 }
 #header {
 	padding: 30px;
@@ -71,6 +72,7 @@ h1 {
 }
 .character {
 	opacity: 0.7;
+	text-align: center;
 }
 
 .character:hover {
